--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -71,6 +71,9 @@ jobs:
     - name: Install Node.js dependencies
       run: npm install
 
+    - name: Build Resources
+      run: npm run build
+
     - name: Wait for MySQL to be ready
       run: |
         until mysql -h 127.0.0.1 -u root -proot -e "SELECT 1"; do
