--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
         "dev": "vite --host",
         "build": "node_modules/prettier/bin/prettier.cjs ./resources/js --write && vite build && node obfuscate.cjs",
         "test": "node_modules/prettier/bin/prettier.cjs ./resources/js --write && vite build",
-        "prettier": "node_modules/prettier/bin/prettier.cjs ./resources/js --write"
+        "prettier" : "npm run js && npm run css",
+        "js": "node_modules/prettier/bin/prettier.cjs ./resources/js --write",
+        "css": "node_modules/prettier/bin/prettier.cjs ./resources/sass --write"
     },
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^6.6.0",
