just some random commit message

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,8 +1,9 @@
 MONGO_URL=mongodb://root:password_of_mongodb_instance@localhost:27017
-JWT_SECRET=setasecret
 
-MONGO_DB=freight
-MONGO_COLLECTION=freight
+BCRYPT_SECRET=
+ESESSION_SECRET=
+
+MONGO_DB=core1
 
 MAIL_HOST=127.0.0.1
 MAIL_PORT=2525
