--- a/server/.env.example
+++ b/server/.env.example
@@ -3,6 +3,8 @@ MONGO_URL=mongodb://root:password_of_mongodb_instance@localhost:27017
 BCRYPT_SECRET=
 ESESSION_SECRET=
 
+CLIENT_ORIGIN=http://localhost:3000
+
 MONGO_DB=core1
 
 MAIL_HOST=127.0.0.1
