--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: NPM Installation
+name: Build
 
 on:
   push:
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         platform: [ubuntu-latest, windows-latest]
-        node-version: [16.x, 17.x, 18.x]
+        node-version: [18.x, 20.x, 22.x]
     runs-on: ${{ matrix.platform }}
     steps:
       - name: Clone repository
