--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,7 @@
     },
     "scripts": {
         "production": "node index",
-        "dev": "nodemon index",
+        "dev": "nodemon --ext js --ignore '*.json' index",
         "lint": "eslint .",
         "lint:fix": "eslint . --fix",
         "format": "prettier --write ."
