--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,23 +1,13 @@
 name: Build
 
 on:
-  push:
-    branches-ignore:
-      - "dependabot/**"
-  schedule:
-  - cron: '0 0 * * *'
-
-env:
-  FORCE_COLOR: 2
-  NODE: 16
+    push:
+        branches: ["main"]
+    workflow_dispatch:
 
 jobs:
   build:
-    strategy:
-      matrix:
-        platform: [ubuntu-latest, windows-latest]
-        node-version: [18.x, 20.x, 22.x]
-    runs-on: ${{ matrix.platform }}
+    runs-on: 'ubuntu-latest'
     steps:
       - name: Clone repository
         uses: actions/checkout@v3
@@ -25,10 +15,27 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ env.node-version }}
+          node-version: 22
 
-      - name: Client
-        run: cd client && npm install && npm run build
+      - name: Build
+        run: |
+          cd client
+          npm i
+          npm run build
+          cd ..
+          mkdir release
+          mv client/build release/client
+          mv server release/server
 
-      - name: Server
-        run: cd server && npm install
+      - name: Upload
+        id: push_directory
+        uses: cpina/github-action-push-to-another-repository@main
+        env:
+          API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
+        with:
+          source-directory: release/
+          destination-github-username: 'freight-capstone'
+          destination-repository-name: 'core1'
+          user-email: mrepol742@gmail.com
+          commit-message: Production
+          target-branch: build
