--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
         "axios": "^1.7.7",
         "chart.js": "^4.4.3",
         "core-js": "^3.37.1",
+        "date-fns": "^4.1.0",
         "js-cookie": "^3.0.5",
         "prop-types": "^15.8.1",
         "react": "^18.3.1",
