--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,15 +28,14 @@ jobs:
           
       - name: Build Server
         run: |
+          cp server server-build -r
           cd server
           npm i
-          mkdir build && cp -r * build/
-          cd build
-          rm -rf build eslint.config.js obfuscate.js node_modules
+          cd ../server-build
+          rm -rf eslint.config.js obfuscate.js
           cd ..
-          cp .env.example build/
-          node obfuscate.js
-          mv server/build release/server
+          node server/obfuscate.js
+          mv server-build release/server
 
       - name: Upload
         id: push_directory
