--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
         "chart.js": "^4.4.3",
         "core-js": "^3.37.1",
         "date-fns": "^4.1.0",
+        "dotenv": "^16.4.5",
         "js-cookie": "^3.0.5",
         "prop-types": "^15.8.1",
         "react": "^18.3.1",
