--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
         "csrf": "^3.1.0",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
+        "express-mongo-sanitize": "^2.2.0",
         "mongodb": "^6.8.0",
         "multer": "^1.4.5-lts.1",
         "node-cron": "^3.0.3",
