--- a/server/.env.example
+++ b/server/.env.example
@@ -2,8 +2,9 @@ MONGO_URL=mongodb://root:password_of_mongodb_instance@localhost:27017
 
 DEBUG=false
 
-BCRYPT_SECRET=
+BCRYPT_ROUND=8
 ESESSION_SECRET=
+RECAPTCHA_SECRET=
 
 CLIENT_ORIGIN=http://localhost:3000
 
