--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "license": "MIT",
     "description": "",
     "dependencies": {
+        "axios": "^1.7.7",
         "bcryptjs": "^2.4.3",
         "blowfish-node": "^1.1.4",
         "cors": "^2.8.5",
