--- a/server/.env.example
+++ b/server/.env.example
@@ -10,9 +10,7 @@ CLIENT_ORIGIN=http://localhost:3000
 
 MONGO_DB=core1
 
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
+MAIL_SERVICE=gmail
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="Freight Core 1"
