--- a/client/.env.example
+++ b/client/.env.example
@@ -1,6 +1,6 @@
-VITE_API_URL=http://localhost:5050
+REACT_APP_API_URL=http://localhost:5050
 
-VITE_RECAPTCHA_SITE_KEY=
-VITE_SESSION=RCTSESSION
+REACT_APP_RECAPTCHA_SITE_KEY=
+REACT_APP_SESSION=RCTSESSION
 
-VITE_MAINTENANCE=true
+REACT_APP_MAINTENANCE=true
