--- a/client/.env.example
+++ b/client/.env.example
@@ -1,6 +1,6 @@
-REACT_APP_API_URL=http://localhost:5050
+VITE_APP_API_URL=http://localhost:5050
 
-REACT_APP_RECAPTCHA_SITE_KEY=
-REACT_APP_SESSION=RCTSESSION
+VITE_APP_RECAPTCHA_SITE_KEY=
+VITE_APP_SESSION=RCTSESSION
 
-REACT_APP_MAINTENANCE=true
+VITE_APP_MAINTENANCE=true
