--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
         "blowfish-node": "^1.1.4",
         "cors": "^2.8.5",
         "csrf": "^3.1.0",
+        "dompurify": "^3.1.7",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "express-mongo-sanitize": "^2.2.0",
