--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "scripts": {
         "build": "env-cmd -f ./.env vite build",
         "lint": "eslint \"src/**/*.js\"",
+        "lint-fix": "eslint \"src/**/*.js\" --fix",
         "serve": "vite preview",
         "start": "vite --host",
         "imagemin": "imagemin build/assets/* --out-dir=build/assets"
@@ -44,7 +45,8 @@
         "react-google-recaptcha": "^3.1.0",
         "react-redux": "^9.1.2",
         "react-router-dom": "^6.23.1",
-        "redux": "5.0.1",
+        "redux": "^5.0.1",
+        "redux-persist": "^6.0.0",
         "simplebar-react": "^3.2.5"
     },
     "devDependencies": {
