improve rate limiter, request sanitazion, cors and frontend building

--- a/server/.env.example
+++ b/server/.env.example
@@ -9,7 +9,7 @@ RECAPTCHA_SECRET=
 
 API_RATE_LIMIT=8
 
-CLIENT_ORIGIN=http://localhost:3000
+CLIENT_ORIGIN="['http://localhost:3000', 'http://0.0.0.0:8000']"
 
 MAIL_SERVICE=gmail
 MAIL_USERNAME=null
