added pagination, api documentation, bug fixes & improvements

--- a/server/.env.example
+++ b/server/.env.example
@@ -9,7 +9,7 @@ BCRYPT_ROUND=8
 ESESSION_SECRET=
 RECAPTCHA_SECRET=
 
-API_RATE_LIMIT=8
+API_RATE_LIMIT=90
 
 CLIENT_ORIGIN=http://localhost:3000
 
@@ -17,3 +17,6 @@ MAIL_SERVICE=gmail
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_FROM_ADDRESS=null
+
+EXTERNAL_API_CORE2_TOKEN=
+EXTERNAL_API_CORE2_ORIGIN=
