code refractor, sentry & uptimerobot integration

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,7 +1,7 @@
 MONGO_URL=mongodb://root:password_of_mongodb_instance@localhost:27017
 MONGO_DB=core1
 
-DEBUG=false
+NODE_ENV=development
 
 PORT=5051
 
@@ -17,6 +17,8 @@ MAIL_SERVICE=gmail
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_FROM_ADDRESS=null
+
+SENTRY_DNS=
 
 EXTERNAL_API_CORE2_TOKEN=
 EXTERNAL_API_CORE2_ORIGIN=
