--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
         "@fortawesome/free-solid-svg-icons": "^6.6.0",
         "@fortawesome/react-fontawesome": "^0.2.2",
         "@popperjs/core": "^2.11.8",
+        "@sentry/react": "^8.33.1",
         "axios": "^1.7.7",
         "chart.js": "^4.4.3",
         "core-js": "^3.37.1",
