--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,8 @@
     "license": "MIT",
     "description": "",
     "dependencies": {
+        "@sentry/node": "^8.33.1",
+        "@sentry/profiling-node": "^8.33.1",
         "axios": "^1.7.7",
         "bcryptjs": "^2.4.3",
         "blowfish-node": "^1.1.4",
