--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,14 +24,13 @@ jobs:
           echo "VITE_APP_RECAPTCHA_SITE_KEY=${{ secrets.APP_RECAPTCHA_SITE_KEY }}" >> .env
           echo "VITE_APP_SESSION=${{ secrets.APP_SESSION }}" >> .env
           echo "VITE_APP_MAINTENANCE=${{ secrets.APP_MAINTENANCE }}" >> .env
-          cd ..
+          echo "VITE_APP_SENTRY_DNS=${{ secrets.APP_SENTRY_DNS }}" >> .env
       
       - name: Build frontend
         run: |
           cd client
           npm i
           npm run build
-          cd ..
 
       - name: Upload frontend
         id: push_directory_frontend
