--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "express-mongo-sanitize": "^2.2.0",
+        "helmet": "^8.0.0",
         "jsdom": "^25.0.1",
         "mongodb": "^6.8.0",
         "multer": "^1.4.5-lts.1",
