--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
     "short_name": "Core1",
-    "name": "Freight Core1",
+    "name": "Axleshift Core 1",
     "icons": [
         {
             "src": "./assets/img/favicon.png",
