bug fixes & improvements

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,7 +1,7 @@
 MONGO_URL=mongodb://root:password_of_mongodb_instance@localhost:27017
 MONGO_DB=core1
 
-NODE_ENV=development
+NODE_ENV=production
 
 PORT=5051
 
