--- a/client/package.json
+++ b/client/package.json
@@ -41,10 +41,12 @@
         "dotenv": "^16.4.5",
         "js-cookie": "^3.0.5",
         "prop-types": "^15.8.1",
+        "qrcode.react": "^4.0.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-ga4": "^2.1.0",
         "react-google-recaptcha": "^3.1.0",
+        "react-i18next": "^15.0.2",
         "react-redux": "^9.1.2",
         "react-router-dom": "^6.23.1",
         "redux": "^5.0.1",
