--- a/client/package.json
+++ b/client/package.json
@@ -39,11 +39,14 @@
         "core-js": "^3.37.1",
         "date-fns": "^4.1.0",
         "dotenv": "^16.4.5",
+        "html2canvas": "^1.4.1",
         "js-cookie": "^3.0.5",
+        "jsqr": "^1.4.0",
         "prop-types": "^15.8.1",
         "qrcode.react": "^4.0.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-dropzone": "^14.2.9",
         "react-ga4": "^2.1.0",
         "react-google-recaptcha": "^3.1.0",
         "react-i18next": "^15.0.2",
