--- a/server/.env.example
+++ b/server/.env.example
@@ -13,10 +13,11 @@ API_RATE_LIMIT=90
 
 CLIENT_ORIGIN=http://localhost:3000
 
-MAIL_SERVICE=gmail
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS=null
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_FROM_ADDRESS=
 
 SENTRY_DNS=
 
