--- a/server/.env.example
+++ b/server/.env.example
@@ -21,5 +21,9 @@ MAIL_FROM_ADDRESS=
 
 SENTRY_DNS=
 
+GITHUB_AUTH_TOKEN=
+GITHUB_REPO=core1
+GITHUB_OWNER=freight-capstone
+
 EXTERNAL_API_CORE2_TOKEN=
 EXTERNAL_API_CORE2_ORIGIN=
