--- a/server/package.json
+++ b/server/package.json
@@ -32,12 +32,15 @@
         "express-mongo-sanitize": "^2.2.0",
         "helmet": "^8.0.0",
         "jsdom": "^25.0.1",
+        "moment": "^2.30.1",
+        "moment-duration-format": "^2.3.2",
         "mongodb": "^6.8.0",
         "multer": "^1.4.5-lts.1",
         "nodemailer": "^6.9.15",
         "pino": "^9.3.2",
         "pino-http": "^10.3.0",
-        "pino-pretty": "^11.2.2"
+        "pino-pretty": "^11.2.2",
+        "ua-parser-js": "^1.0.39"
     },
     "devDependencies": {
         "javascript-obfuscator": "^4.1.1",
