added landing page

--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
         "@popperjs/core": "^2.11.8",
         "@react-google-maps/api": "^2.19.3",
         "@sentry/react": "^8.33.1",
+        "aos": "^2.3.4",
         "axios": "^1.7.7",
         "chart.js": "^4.4.3",
         "core-js": "^3.37.1",
