--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
         "@coreui/react": "^5.1.0",
         "@coreui/react-chartjs": "^3.0.0",
         "@coreui/utils": "^2.0.2",
+        "@fontsource/poppins": "^5.1.0",
         "@fortawesome/fontawesome-svg-core": "^6.6.0",
         "@fortawesome/free-brands-svg-icons": "^6.6.0",
         "@fortawesome/free-regular-svg-icons": "^6.6.0",
