update setup script

--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "server": "cd server && npm run dev",
     "client": "cd client && npm run start",
     "setup": "concurrently \"npm run server-install\" \"npm run client-install\"",
-    "server-install": "cd server && npm i && cp .env.example .env",
-    "client-install": "cd client && npm i && cp .env.example .env",
+    "server-install": "cd server && npm i && [ ! -f .env ] && cp .env.example .env",
+    "client-install": "cd client && npm i &&  [ ! -f .env ] && cp .env.example .env",
     "post-production": "concurrently \"npm run server\" \"npm run client-post\"",
     "client-post": "cd client && npm run build && cd build && python3 -m http.server",
     "lint": "concurrently \"npm run server-lint\" \"npm run client-lint\"",
