--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "license": "MIT",
     "description": "",
     "dependencies": {
+        "@langchain/community": "^0.3.5",
         "@sentry/node": "^8.33.1",
         "@sentry/profiling-node": "^8.33.1",
         "axios": "^1.7.7",
