--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "description": "",
     "dependencies": {
         "@langchain/community": "^0.3.5",
+        "@langchain/core": "^0.3.10",
         "@sentry/node": "^8.33.1",
         "@sentry/profiling-node": "^8.33.1",
         "axios": "^1.7.7",
@@ -33,12 +34,14 @@
         "express-mongo-sanitize": "^2.2.0",
         "helmet": "^8.0.0",
         "jsdom": "^25.0.1",
+        "langchain": "^0.3.2",
         "moment": "^2.30.1",
         "moment-duration-format": "^2.3.2",
         "mongodb": "^6.8.0",
         "multer": "^1.4.5-lts.1",
         "node-cron": "^3.0.3",
         "nodemailer": "^6.9.15",
+        "node-llama-cpp": "^2.8.5",
         "pino": "^9.3.2",
         "pino-http": "^10.3.0",
         "pino-pretty": "^11.2.2",
