--- a/server/.env.example
+++ b/server/.env.example
@@ -25,6 +25,10 @@ GITHUB_AUTH_TOKEN=
 GITHUB_REPO=core1
 GITHUB_OWNER=freight-capstone
 
+SENTRY_AUTH_TOKEN=
+SENTRY_ORGANIZATION_SLUG=
+SENTRY_PROJECT_SLUG=
+
 EXTERNAL_API_CORE2_TOKEN=
 EXTERNAL_API_CORE2_ORIGIN=
 
