--- a/server/.env.example
+++ b/server/.env.example
@@ -9,7 +9,8 @@ BCRYPT_ROUND=8
 ESESSION_SECRET=
 RECAPTCHA_SECRET=
 
-API_RATE_LIMIT=90
+API_RATE_LIMIT=30
+API_RATE_DELAY=600
 
 CLIENT_ORIGIN=http://localhost:3000
 
