bug fixes & impro..

--- a/client/package.json
+++ b/client/package.json
@@ -37,15 +37,18 @@
         "@sentry/react": "^8.33.1",
         "aos": "^2.3.4",
         "axios": "^1.7.7",
+        "boolean-pro": "^1.0.0",
         "chart.js": "^4.4.3",
         "core-js": "^3.37.1",
         "dotenv": "^16.4.5",
         "firebase": "^10.14.1",
         "html2canvas": "^1.4.1",
+        "is-spaghetti-code": "^1.0.0",
         "js-cookie": "^3.0.5",
         "jsqr": "^1.4.0",
         "prop-types": "^15.8.1",
         "qrcode.react": "^4.0.1",
+        "ratelimit-header-parser": "^0.1.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-dropzone": "^14.2.9",
