--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
         "axios": "^1.7.7",
         "bcryptjs": "^2.4.3",
         "blowfish-node": "^1.1.4",
+        "boolean-pro": "^1.0.0",
         "cors": "^2.8.5",
         "csrf": "^3.1.0",
         "dompurify": "^3.1.7",
@@ -32,6 +33,7 @@
         "express-mongo-sanitize": "^2.2.0",
         "express-status-monitor": "^1.3.4",
         "helmet": "^8.0.0",
+        "is-spaghetti-code": "^1.0.0",
         "jsdom": "^25.0.1",
         "mongodb": "^6.8.0",
         "multer": "^1.4.5-lts.1",
