the new apikey and token now works

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,36 +1,30 @@
-MONGO_URL=mongodb://root:password_of_mongodb_instance@localhost:27017
+MONGO_URL=
 MONGO_DB=core1
 
-NODE_ENV=production
-
-PORT=5051
-
-BCRYPT_ROUND=8
-ESESSION_SECRET=
+NODE_ENV=development
+EXPRESS_PORT=5051
+REACT_APP_ORIGIN=http://localhost:3000
 RECAPTCHA_SECRET=
 
 API_RATE_LIMIT=30
 API_RATE_DELAY=600
+API_EXTERNAL_RATE_LIMIT=1000
+API_EXTERNAL_RATE_DELAY=600
 
-CLIENT_ORIGIN=http://localhost:3000
-
-MAIL_HOST=
-MAIL_PORT=
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
 MAIL_USERNAME=
 MAIL_PASSWORD=
 MAIL_FROM_ADDRESS=
-
-SENTRY_DNS=
 
 GITHUB_AUTH_TOKEN=
 GITHUB_REPO=core1
 GITHUB_OWNER=freight-capstone
 
+SENTRY_DNS=
 SENTRY_AUTH_TOKEN=
-SENTRY_ORGANIZATION_SLUG=
-SENTRY_PROJECT_SLUG=
+SENTRY_ORGANIZATION_SLUG=freight-capstone
+SENTRY_PROJECT_SLUG=core1
 
-EXTERNAL_API_CORE2_TOKEN=
-EXTERNAL_API_CORE2_ORIGIN=
-
-LLMS_MODEL=
+LLMS_MODEL=mistral-7b-instruct-v0.1.Q5_K_M.gguf
+MODEL=blacbox
