--- a/client/package.json
+++ b/client/package.json
@@ -55,6 +55,7 @@
         "react-ga4": "^2.1.0",
         "react-google-recaptcha": "^3.1.0",
         "react-i18next": "^15.0.2",
+        "react-masonry-css": "^1.0.16",
         "react-redux": "^9.1.2",
         "react-router-dom": "^6.23.1",
         "redux": "^5.0.1",
