--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
         "lint": "eslint \"src/**/*.js\"",
         "lint-fix": "eslint \"src/**/*.js\" --fix",
         "serve": "vite preview",
-        "start": "vite --host"
+        "start": "vite --host",
+        "test": "jest"
     },
     "dependencies": {
         "@coreui/chartjs": "^4.0.0",
@@ -64,17 +65,29 @@
         "ua-parser-js": "^1.0.39"
     },
     "devDependencies": {
+        "@babel/preset-env": "^7.25.8",
+        "@babel/preset-react": "^7.25.7",
+        "@testing-library/jest-dom": "^6.6.2",
+        "@testing-library/react": "^16.0.1",
         "@vitejs/plugin-react": "^4.3.1",
         "autoprefixer": "^10.4.19",
+        "babel-jest": "^29.7.0",
+        "babel-preset-vite": "^1.1.3",
         "env-cmd": "^10.1.0",
         "eslint": "^8.57.1",
         "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-jest": "^28.8.3",
         "eslint-plugin-prettier": "^5.2.1",
         "eslint-plugin-react": "^7.37.1",
         "eslint-plugin-react-hooks": "^4.6.2",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
         "postcss": "^8.4.38",
         "prettier": "3.3.2",
         "sass": "^1.77.5",
         "vite": "^5.4.7"
+    },
+    "engines": {
+        "node": ">=20.x"
     }
 }
