--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     },
     "scripts": {
         "production": "node src/index",
+        "test": "mocha --reporter spec --timeout 10000",
         "dev": "nodemon --ext js --ignore '*.json' src/index",
         "lint": "prettier --write ."
     },
@@ -25,11 +26,11 @@
         "bcryptjs": "^2.4.3",
         "blowfish-node": "^1.1.4",
         "boolean-pro": "^1.0.0",
+        "compression": "^1.7.4",
         "cors": "^2.8.5",
         "csrf": "^3.1.0",
         "dompurify": "^3.1.7",
         "dotenv": "^16.4.5",
-        "express": "^4.19.2",
         "express-mongo-sanitize": "^2.2.0",
         "express-status-monitor": "^1.3.4",
         "helmet": "^8.0.0",
@@ -45,7 +46,14 @@
         "ratelimit-header-parser": "^0.1.0"
     },
     "devDependencies": {
+        "chai": "^5.1.1",
+        "express": "^4.21.1",
+        "mocha": "^10.7.3",
         "nodemon": "^3.1.4",
-        "prettier": "^3.3.3"
+        "prettier": "^3.3.3",
+        "supertest": "^7.0.0"
+    },
+    "engines": {
+        "node": ">=20.x"
     }
 }
