--- a/client/.env.example
+++ b/client/.env.example
@@ -10,6 +10,8 @@ VITE_APP_SENTRY_DNS=
 VITE_APP_GOOGLE_ANALYTICS=
 VITE_APP_GOOGLE_MAP=
 
+VITE_APP_GOOGLE_OAUTH_CLIENT_ID=
+
 VITE_APP_FIREBASE_API_KEY=
 VITE_APP_FIREBASE_AUTH_DOMAIN=
 VITE_APP_FIREBASE_PROJECT_ID=
