--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,17 +8,6 @@ on:
 jobs:
   build:
     runs-on: 'ubuntu-latest'
-    services:
-      mongo:
-        image: mongo:latest
-        ports:
-          - 27017:27017
-        options: >-
-          --health-cmd "mongo --eval 'db.runCommand({ ping: 1 })'"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
     steps:
       - name: Clone repository
         uses: actions/checkout@v4
@@ -33,11 +22,6 @@ jobs:
         with:
           mongodb-version: 'latest'
 
-      - name: Wait for MongoDB to start
-        run: |
-          echo "Waiting for MongoDB..."
-          until nc -z localhost 27017; do sleep 1; done
-        
       - name: Set up environment
         run: |
           cd client
@@ -67,7 +51,7 @@ jobs:
           echo "API_EXTERNAL_RATE_LIMIT=1000}" >> .env
           echo "API_EXTERNAL_RATE_DELAY=600}" >> .env
         
-      - name: Install NPM dependencies
+      - name: Install dependencies
         run: |
           npm i
           npm run setup
