--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,16 +1,19 @@
-name: Docker
+name: Docker CI
 
 on:
-    push:
-        branches: ["core1-backend"]
-    workflow_dispatch:
+  push:
+    branches: ["core1-backend"]
+  workflow_dispatch:
 
 jobs:
-  build:
+  docker:
     runs-on: 'ubuntu-latest'
+
     steps:
       - name: Clone repository
         uses: actions/checkout@v4
+        with:
+          ref: core1-backend
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
