--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -12,7 +12,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
+        with:
+          ref: core1-backend
+          
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
         with:
