--- a/server/.env.example
+++ b/server/.env.example
@@ -6,6 +6,8 @@ EXPRESS_PORT=5051
 REACT_APP_ORIGIN=http://localhost:3000
 RECAPTCHA_SECRET=
 
+GOOGLE_OAUTH_CLIENT_ID=
+
 API_RATE_LIMIT=30
 API_RATE_DELAY=600
 API_EXTERNAL_RATE_LIMIT=1000
