--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
         "helmet": "^8.0.0",
         "is-spaghetti-code": "^1.0.0",
         "jsdom": "^25.0.1",
+        "jwt-decode": "^4.0.0",
         "mongodb": "^6.8.0",
         "multer": "^1.4.5-lts.1",
         "node-cron": "^3.0.3",
