--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -6,9 +6,12 @@ on:
   workflow_dispatch:
 
 jobs:
+  docker:
+    uses: ./.github/workflows/docker.yml
+
   terraform:
     runs-on: ubuntu-latest
-
+    needs: [ docker ]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
