--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,30 +1,25 @@
-bug:
-  - "bug"
-  - "fix"
-  - "solve"
-  - "address"
-feature:
-  - "feature"
-  - "enhancement"
-  - "works"
-  - "added"
+root:
+- changed-files:
+  - any-glob-to-any-file: '*'
+
 documentation:
-  - "*.md"
+- changed-files:
+  - any-glob-to-any-file: '**/*.md'
+
 workflow:
-  - "*.yml"
-npm:
-  - "package.json"
-  - "package-lock.json"
+- changed-files:
+  - any-glob-to-any-file: '**/*.yml'
+
 test:
-  - "*.test.js"
+- changed-files:
+  - any-glob-to-any-file: 'server'
+
+frontend:
+- all:
   - changed-files:
-        - any-glob-to-any-file:
-            - server/test/**
-server:
-    - changed-files:
-        - any-glob-to-any-file:
-            - server/**
-client:
-    - changed-files:
-        - any-glob-to-any-file:
-            - client/**
+    - any-glob-to-any-file: 'client/src/**/*'
+
+backend:
+- all:
+  - changed-files:
+    - any-glob-to-any-file: 'server/src/**/*'
