added github oauth2 and fix https://github.com/freight-capstone/core1/issues/89 https://github.com/freight-capstone/core1/issues/79

--- a/server/.env.example
+++ b/server/.env.example
@@ -7,6 +7,9 @@ REACT_APP_ORIGIN=http://localhost:3000
 RECAPTCHA_SECRET=
 
 GOOGLE_OAUTH_CLIENT_ID=
+GOOGLE_OAUTH_SECRET_ID=
+GITHUB_OAUTH_CLIENT_ID=
+GITHUB_OAUTH_SECRET_ID=
 
 API_RATE_LIMIT=30
 API_RATE_DELAY=600
